parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMMENT

Grammar

Rule 0     S' -> prog
Rule 1     prog -> func
Rule 2     prog -> func prog
Rule 3     func -> FUNCTION iden LPAREN flist RPAREN RETURNS type COLON body END
Rule 4     body -> stmt
Rule 5     body -> stmt body
Rule 6     stmt -> expr SEMICOLON
Rule 7     stmt -> defvar SEMICOLON
Rule 8     stmt -> IF LPAREN expr RPAREN COLON stmt END
Rule 9     stmt -> IF LPAREN expr RPAREN COLON stmt ELSE COLON stmt END
Rule 10    stmt -> WHILE LPAREN expr RPAREN DO stmt
Rule 11    stmt -> FOREACH LPAREN iden OF expr RPAREN stmt
Rule 12    stmt -> RETURN expr SEMICOLON
Rule 13    stmt -> COLON body END
Rule 14    defvar -> VAL type iden
Rule 15    expr -> iden LPAREN clist RPAREN
Rule 16    expr -> expr LSQUAREBR expr RSQUAREBR
Rule 17    expr -> expr QUESTIONMARK expr COLON expr
Rule 18    expr -> expr EQUAL expr
Rule 19    expr -> expr PLUS expr
Rule 20    expr -> expr MINUS expr
Rule 21    expr -> expr TIMES expr
Rule 22    expr -> expr DIVIDE expr
Rule 23    expr -> expr MOD expr
Rule 24    expr -> expr LESS_THAN expr
Rule 25    expr -> expr GREATER_THAN expr
Rule 26    expr -> expr EQUALEQUAL expr
Rule 27    expr -> expr NOT_EQUAL expr
Rule 28    expr -> expr LESS_EQUAL expr
Rule 29    expr -> expr GREATER_EQUAL expr
Rule 30    expr -> expr OROR expr
Rule 31    expr -> expr ANDAND expr
Rule 32    expr -> NOT expr
Rule 33    expr -> MINUS expr
Rule 34    expr -> PLUS expr
Rule 35    expr -> LPAREN expr RPAREN
Rule 36    expr -> iden
Rule 37    expr -> number
Rule 38    flist -> <empty>
Rule 39    flist -> type iden
Rule 40    flist -> type iden COMA flist
Rule 41    clist -> <empty>
Rule 42    clist -> expr
Rule 43    clist -> expr COMA clist
Rule 44    type -> INT
Rule 45    type -> ARRAY
Rule 46    type -> NIL
Rule 47    iden -> IDEN
Rule 48    number -> NUMBER

Terminals, with rules where they appear

ANDAND               : 31
ARRAY                : 45
COLON                : 3 8 9 9 13 17
COMA                 : 40 43
COMMENT              : 
DIVIDE               : 22
DO                   : 10
ELSE                 : 9
END                  : 3 8 9 13
EQUAL                : 18
EQUALEQUAL           : 26
FOREACH              : 11
FUNCTION             : 3
GREATER_EQUAL        : 29
GREATER_THAN         : 25
IDEN                 : 47
IF                   : 8 9
INT                  : 44
LESS_EQUAL           : 28
LESS_THAN            : 24
LPAREN               : 3 8 9 10 11 15 35
LSQUAREBR            : 16
MINUS                : 20 33
MOD                  : 23
NIL                  : 46
NOT                  : 32
NOT_EQUAL            : 27
NUMBER               : 48
OF                   : 11
OROR                 : 30
PLUS                 : 19 34
QUESTIONMARK         : 17
RETURN               : 12
RETURNS              : 3
RPAREN               : 3 8 9 10 11 15 35
RSQUAREBR            : 16
SEMICOLON            : 6 7 12
TIMES                : 21
VAL                  : 14
WHILE                : 10
error                : 

Nonterminals, with rules where they appear

body                 : 3 5 13
clist                : 15 43
defvar               : 7
expr                 : 6 8 9 10 11 12 16 16 17 17 17 18 18 19 19 20 20 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 33 34 35 42 43
flist                : 3 40
func                 : 1 2
iden                 : 3 11 14 15 36 39 40
number               : 37
prog                 : 2 0
stmt                 : 4 5 8 9 9 10 11
type                 : 3 14 39 40

Parsing method: LALR

state 0

    (0) S' -> . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . FUNCTION iden LPAREN flist RPAREN RETURNS type COLON body END

    FUNCTION        shift and go to state 3

    prog                           shift and go to state 1
    func                           shift and go to state 2

state 1

    (0) S' -> prog .



state 2

    (1) prog -> func .
    (2) prog -> func . prog
    (1) prog -> . func
    (2) prog -> . func prog
    (3) func -> . FUNCTION iden LPAREN flist RPAREN RETURNS type COLON body END

    $end            reduce using rule 1 (prog -> func .)
    FUNCTION        shift and go to state 3

    func                           shift and go to state 2
    prog                           shift and go to state 4

state 3

    (3) func -> FUNCTION . iden LPAREN flist RPAREN RETURNS type COLON body END
    (47) iden -> . IDEN

    IDEN            shift and go to state 6

    iden                           shift and go to state 5

state 4

    (2) prog -> func prog .

    $end            reduce using rule 2 (prog -> func prog .)


state 5

    (3) func -> FUNCTION iden . LPAREN flist RPAREN RETURNS type COLON body END

    LPAREN          shift and go to state 7


state 6

    (47) iden -> IDEN .

    LPAREN          reduce using rule 47 (iden -> IDEN .)
    COMA            reduce using rule 47 (iden -> IDEN .)
    RPAREN          reduce using rule 47 (iden -> IDEN .)
    SEMICOLON       reduce using rule 47 (iden -> IDEN .)
    LSQUAREBR       reduce using rule 47 (iden -> IDEN .)
    QUESTIONMARK    reduce using rule 47 (iden -> IDEN .)
    EQUAL           reduce using rule 47 (iden -> IDEN .)
    PLUS            reduce using rule 47 (iden -> IDEN .)
    MINUS           reduce using rule 47 (iden -> IDEN .)
    TIMES           reduce using rule 47 (iden -> IDEN .)
    DIVIDE          reduce using rule 47 (iden -> IDEN .)
    MOD             reduce using rule 47 (iden -> IDEN .)
    LESS_THAN       reduce using rule 47 (iden -> IDEN .)
    GREATER_THAN    reduce using rule 47 (iden -> IDEN .)
    EQUALEQUAL      reduce using rule 47 (iden -> IDEN .)
    NOT_EQUAL       reduce using rule 47 (iden -> IDEN .)
    LESS_EQUAL      reduce using rule 47 (iden -> IDEN .)
    GREATER_EQUAL   reduce using rule 47 (iden -> IDEN .)
    OROR            reduce using rule 47 (iden -> IDEN .)
    ANDAND          reduce using rule 47 (iden -> IDEN .)
    RSQUAREBR       reduce using rule 47 (iden -> IDEN .)
    COLON           reduce using rule 47 (iden -> IDEN .)
    OF              reduce using rule 47 (iden -> IDEN .)


state 7

    (3) func -> FUNCTION iden LPAREN . flist RPAREN RETURNS type COLON body END
    (38) flist -> .
    (39) flist -> . type iden
    (40) flist -> . type iden COMA flist
    (44) type -> . INT
    (45) type -> . ARRAY
    (46) type -> . NIL

    RPAREN          reduce using rule 38 (flist -> .)
    INT             shift and go to state 10
    ARRAY           shift and go to state 11
    NIL             shift and go to state 12

    flist                          shift and go to state 8
    type                           shift and go to state 9

state 8

    (3) func -> FUNCTION iden LPAREN flist . RPAREN RETURNS type COLON body END

    RPAREN          shift and go to state 13


state 9

    (39) flist -> type . iden
    (40) flist -> type . iden COMA flist
    (47) iden -> . IDEN

    IDEN            shift and go to state 6

    iden                           shift and go to state 14

state 10

    (44) type -> INT .

    IDEN            reduce using rule 44 (type -> INT .)
    COLON           reduce using rule 44 (type -> INT .)


state 11

    (45) type -> ARRAY .

    IDEN            reduce using rule 45 (type -> ARRAY .)
    COLON           reduce using rule 45 (type -> ARRAY .)


state 12

    (46) type -> NIL .

    IDEN            reduce using rule 46 (type -> NIL .)
    COLON           reduce using rule 46 (type -> NIL .)


state 13

    (3) func -> FUNCTION iden LPAREN flist RPAREN . RETURNS type COLON body END

    RETURNS         shift and go to state 15


state 14

    (39) flist -> type iden .
    (40) flist -> type iden . COMA flist

    RPAREN          reduce using rule 39 (flist -> type iden .)
    COMA            shift and go to state 16


state 15

    (3) func -> FUNCTION iden LPAREN flist RPAREN RETURNS . type COLON body END
    (44) type -> . INT
    (45) type -> . ARRAY
    (46) type -> . NIL

    INT             shift and go to state 10
    ARRAY           shift and go to state 11
    NIL             shift and go to state 12

    type                           shift and go to state 17

state 16

    (40) flist -> type iden COMA . flist
    (38) flist -> .
    (39) flist -> . type iden
    (40) flist -> . type iden COMA flist
    (44) type -> . INT
    (45) type -> . ARRAY
    (46) type -> . NIL

    RPAREN          reduce using rule 38 (flist -> .)
    INT             shift and go to state 10
    ARRAY           shift and go to state 11
    NIL             shift and go to state 12

    type                           shift and go to state 9
    flist                          shift and go to state 18

state 17

    (3) func -> FUNCTION iden LPAREN flist RPAREN RETURNS type . COLON body END

    COLON           shift and go to state 19


state 18

    (40) flist -> type iden COMA flist .

    RPAREN          reduce using rule 40 (flist -> type iden COMA flist .)


state 19

    (3) func -> FUNCTION iden LPAREN flist RPAREN RETURNS type COLON . body END
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMICOLON
    (7) stmt -> . defvar SEMICOLON
    (8) stmt -> . IF LPAREN expr RPAREN COLON stmt END
    (9) stmt -> . IF LPAREN expr RPAREN COLON stmt ELSE COLON stmt END
    (10) stmt -> . WHILE LPAREN expr RPAREN DO stmt
    (11) stmt -> . FOREACH LPAREN iden OF expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMICOLON
    (13) stmt -> . COLON body END
    (15) expr -> . iden LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr QUESTIONMARK expr COLON expr
    (18) expr -> . expr EQUAL expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr MOD expr
    (24) expr -> . expr LESS_THAN expr
    (25) expr -> . expr GREATER_THAN expr
    (26) expr -> . expr EQUALEQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr LESS_EQUAL expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr OROR expr
    (31) expr -> . expr ANDAND expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . PLUS expr
    (35) expr -> . LPAREN expr RPAREN
    (36) expr -> . iden
    (37) expr -> . number
    (14) defvar -> . VAL type iden
    (47) iden -> . IDEN
    (48) number -> . NUMBER

    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOREACH         shift and go to state 29
    RETURN          shift and go to state 30
    COLON           shift and go to state 22
    NOT             shift and go to state 33
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    LPAREN          shift and go to state 21
    VAL             shift and go to state 35
    IDEN            shift and go to state 6
    NUMBER          shift and go to state 36

    iden                           shift and go to state 20
    body                           shift and go to state 23
    stmt                           shift and go to state 24
    expr                           shift and go to state 25
    defvar                         shift and go to state 26
    number                         shift and go to state 34

state 20

    (15) expr -> iden . LPAREN clist RPAREN
    (36) expr -> iden .

    LPAREN          shift and go to state 37
    SEMICOLON       reduce using rule 36 (expr -> iden .)
    LSQUAREBR       reduce using rule 36 (expr -> iden .)
    QUESTIONMARK    reduce using rule 36 (expr -> iden .)
    EQUAL           reduce using rule 36 (expr -> iden .)
    PLUS            reduce using rule 36 (expr -> iden .)
    MINUS           reduce using rule 36 (expr -> iden .)
    TIMES           reduce using rule 36 (expr -> iden .)
    DIVIDE          reduce using rule 36 (expr -> iden .)
    MOD             reduce using rule 36 (expr -> iden .)
    LESS_THAN       reduce using rule 36 (expr -> iden .)
    GREATER_THAN    reduce using rule 36 (expr -> iden .)
    EQUALEQUAL      reduce using rule 36 (expr -> iden .)
    NOT_EQUAL       reduce using rule 36 (expr -> iden .)
    LESS_EQUAL      reduce using rule 36 (expr -> iden .)
    GREATER_EQUAL   reduce using rule 36 (expr -> iden .)
    OROR            reduce using rule 36 (expr -> iden .)
    ANDAND          reduce using rule 36 (expr -> iden .)
    RPAREN          reduce using rule 36 (expr -> iden .)
    COMA            reduce using rule 36 (expr -> iden .)
    RSQUAREBR       reduce using rule 36 (expr -> iden .)
    COLON           reduce using rule 36 (expr -> iden .)


state 21

    (35) expr -> LPAREN . expr RPAREN
    (15) expr -> . iden LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr QUESTIONMARK expr COLON expr
    (18) expr -> . expr EQUAL expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr MOD expr
    (24) expr -> . expr LESS_THAN expr
    (25) expr -> . expr GREATER_THAN expr
    (26) expr -> . expr EQUALEQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr LESS_EQUAL expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr OROR expr
    (31) expr -> . expr ANDAND expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . PLUS expr
    (35) expr -> . LPAREN expr RPAREN
    (36) expr -> . iden
    (37) expr -> . number
    (47) iden -> . IDEN
    (48) number -> . NUMBER

    NOT             shift and go to state 33
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    LPAREN          shift and go to state 21
    IDEN            shift and go to state 6
    NUMBER          shift and go to state 36

    expr                           shift and go to state 38
    iden                           shift and go to state 20
    number                         shift and go to state 34

state 22

    (13) stmt -> COLON . body END
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMICOLON
    (7) stmt -> . defvar SEMICOLON
    (8) stmt -> . IF LPAREN expr RPAREN COLON stmt END
    (9) stmt -> . IF LPAREN expr RPAREN COLON stmt ELSE COLON stmt END
    (10) stmt -> . WHILE LPAREN expr RPAREN DO stmt
    (11) stmt -> . FOREACH LPAREN iden OF expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMICOLON
    (13) stmt -> . COLON body END
    (15) expr -> . iden LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr QUESTIONMARK expr COLON expr
    (18) expr -> . expr EQUAL expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr MOD expr
    (24) expr -> . expr LESS_THAN expr
    (25) expr -> . expr GREATER_THAN expr
    (26) expr -> . expr EQUALEQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr LESS_EQUAL expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr OROR expr
    (31) expr -> . expr ANDAND expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . PLUS expr
    (35) expr -> . LPAREN expr RPAREN
    (36) expr -> . iden
    (37) expr -> . number
    (14) defvar -> . VAL type iden
    (47) iden -> . IDEN
    (48) number -> . NUMBER

    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOREACH         shift and go to state 29
    RETURN          shift and go to state 30
    COLON           shift and go to state 22
    NOT             shift and go to state 33
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    LPAREN          shift and go to state 21
    VAL             shift and go to state 35
    IDEN            shift and go to state 6
    NUMBER          shift and go to state 36

    body                           shift and go to state 39
    stmt                           shift and go to state 24
    expr                           shift and go to state 25
    defvar                         shift and go to state 26
    iden                           shift and go to state 20
    number                         shift and go to state 34

state 23

    (3) func -> FUNCTION iden LPAREN flist RPAREN RETURNS type COLON body . END

    END             shift and go to state 40


state 24

    (4) body -> stmt .
    (5) body -> stmt . body
    (4) body -> . stmt
    (5) body -> . stmt body
    (6) stmt -> . expr SEMICOLON
    (7) stmt -> . defvar SEMICOLON
    (8) stmt -> . IF LPAREN expr RPAREN COLON stmt END
    (9) stmt -> . IF LPAREN expr RPAREN COLON stmt ELSE COLON stmt END
    (10) stmt -> . WHILE LPAREN expr RPAREN DO stmt
    (11) stmt -> . FOREACH LPAREN iden OF expr RPAREN stmt
    (12) stmt -> . RETURN expr SEMICOLON
    (13) stmt -> . COLON body END
    (15) expr -> . iden LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr QUESTIONMARK expr COLON expr
    (18) expr -> . expr EQUAL expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr MOD expr
    (24) expr -> . expr LESS_THAN expr
    (25) expr -> . expr GREATER_THAN expr
    (26) expr -> . expr EQUALEQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr LESS_EQUAL expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr OROR expr
    (31) expr -> . expr ANDAND expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . PLUS expr
    (35) expr -> . LPAREN expr RPAREN
    (36) expr -> . iden
    (37) expr -> . number
    (14) defvar -> . VAL type iden
    (47) iden -> . IDEN
    (48) number -> . NUMBER

    END             reduce using rule 4 (body -> stmt .)
    IF              shift and go to state 27
    WHILE           shift and go to state 28
    FOREACH         shift and go to state 29
    RETURN          shift and go to state 30
    COLON           shift and go to state 22
    NOT             shift and go to state 33
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    LPAREN          shift and go to state 21
    VAL             shift and go to state 35
    IDEN            shift and go to state 6
    NUMBER          shift and go to state 36

    stmt                           shift and go to state 24
    body                           shift and go to state 41
    expr                           shift and go to state 25
    defvar                         shift and go to state 26
    iden                           shift and go to state 20
    number                         shift and go to state 34

state 25

    (6) stmt -> expr . SEMICOLON
    (16) expr -> expr . LSQUAREBR expr RSQUAREBR
    (17) expr -> expr . QUESTIONMARK expr COLON expr
    (18) expr -> expr . EQUAL expr
    (19) expr -> expr . PLUS expr
    (20) expr -> expr . MINUS expr
    (21) expr -> expr . TIMES expr
    (22) expr -> expr . DIVIDE expr
    (23) expr -> expr . MOD expr
    (24) expr -> expr . LESS_THAN expr
    (25) expr -> expr . GREATER_THAN expr
    (26) expr -> expr . EQUALEQUAL expr
    (27) expr -> expr . NOT_EQUAL expr
    (28) expr -> expr . LESS_EQUAL expr
    (29) expr -> expr . GREATER_EQUAL expr
    (30) expr -> expr . OROR expr
    (31) expr -> expr . ANDAND expr

    SEMICOLON       shift and go to state 42
    LSQUAREBR       shift and go to state 43
    QUESTIONMARK    shift and go to state 44
    EQUAL           shift and go to state 45
    PLUS            shift and go to state 46
    MINUS           shift and go to state 47
    TIMES           shift and go to state 48
    DIVIDE          shift and go to state 49
    MOD             shift and go to state 50
    LESS_THAN       shift and go to state 51
    GREATER_THAN    shift and go to state 52
    EQUALEQUAL      shift and go to state 53
    NOT_EQUAL       shift and go to state 54
    LESS_EQUAL      shift and go to state 55
    GREATER_EQUAL   shift and go to state 56
    OROR            shift and go to state 57
    ANDAND          shift and go to state 58


state 26

    (7) stmt -> defvar . SEMICOLON

    SEMICOLON       shift and go to state 59


state 27

    (8) stmt -> IF . LPAREN expr RPAREN COLON stmt END
    (9) stmt -> IF . LPAREN expr RPAREN COLON stmt ELSE COLON stmt END

    LPAREN          shift and go to state 60


state 28

    (10) stmt -> WHILE . LPAREN expr RPAREN DO stmt

    LPAREN          shift and go to state 61


state 29

    (11) stmt -> FOREACH . LPAREN iden OF expr RPAREN stmt

    LPAREN          shift and go to state 62


state 30

    (12) stmt -> RETURN . expr SEMICOLON
    (15) expr -> . iden LPAREN clist RPAREN
    (16) expr -> . expr LSQUAREBR expr RSQUAREBR
    (17) expr -> . expr QUESTIONMARK expr COLON expr
    (18) expr -> . expr EQUAL expr
    (19) expr -> . expr PLUS expr
    (20) expr -> . expr MINUS expr
    (21) expr -> . expr TIMES expr
    (22) expr -> . expr DIVIDE expr
    (23) expr -> . expr MOD expr
    (24) expr -> . expr LESS_THAN expr
    (25) expr -> . expr GREATER_THAN expr
    (26) expr -> . expr EQUALEQUAL expr
    (27) expr -> . expr NOT_EQUAL expr
    (28) expr -> . expr LESS_EQUAL expr
    (29) expr -> . expr GREATER_EQUAL expr
    (30) expr -> . expr OROR expr
    (31) expr -> . expr ANDAND expr
    (32) expr -> . NOT expr
    (33) expr -> . MINUS expr
    (34) expr -> . PLUS expr
    (35) expr -> . LPAREN expr RPAREN
    (36) expr -> . iden
    (37) expr -> . number
    (47) iden -> . IDEN
    (48) number -> . NUMBER

    NOT             shift and go to state 33
    MINUS           shift and go to state 32
    PLUS            shift and go to state 31
    LPAREN          shift and go to state 21
    IDEN            shift and go to state 6
    NUMBER          shift and go to state 36
